<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_editor_category_editing">
        <SwitchPreferenceCompat
            android:key="@string/pref_key_text_editor_word_wrap"
            android:title="@string/settings_text_editor_word_wrap_title"
            android:summary="@string/settings_text_editor_word_wrap_summary"
            android:defaultValue="@bool/pref_default_value_text_editor_word_wrap" />
        <SwitchPreferenceCompat
            android:key="key_text_editor_line_numbers"
            android:title="@string/settings_text_editor_show_line_numbers_title"
            android:summary="@string/settings_text_editor_show_line_numbers_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_editor_category_appearance">
        <rikka.preference.SimpleMenuPreference
            android:key="@string/pref_key_text_editor_font_size"
            android:title="@string/settings_text_editor_font_size_title"
            android:defaultValue="@string/pref_default_value_text_editor_font_size"
            android:entries="@array/settings_text_editor_font_size_entries"
            android:entryValues="@array/pref_entry_values_text_editor_font_size"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="@string/pref_key_text_editor_page_guide"
            android:title="@string/settings_text_editor_page_guide_title"
            android:summary="@string/settings_text_editor_page_guide_summary"
            android:defaultValue="@bool/pref_default_value_text_editor_page_guide" />
        <Preference
            android:key="@string/pref_key_editor_appearance_settings"
            android:title="@string/settings_editor_appearance_title"
            android:summary="@string/settings_editor_appearance_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_editor_category_toolbar">
        <SwitchPreferenceCompat
            android:key="key_text_editor_symbol_bar"
            android:title="@string/settings_editor_symbol_bar_title"
            android:summary="@string/settings_editor_symbol_bar_summary"
            android:defaultValue="true" />
        <Preference
            android:key="@string/pref_key_editor_toolbar_settings"
            android:title="@string/settings_editor_toolbar_title"
            android:summary="@string/settings_editor_toolbar_summary" />
    </PreferenceCategory>
</PreferenceScreen>
