<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_compare"
        android:icon="@drawable/add_icon_control_normal_24dp"
        android:orderInCategory="90"
        android:title="@string/text_editor_compare"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="110"
        android:title="@string/text_editor_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="210"
        android:title="@string/text_editor_undo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_redo"
        android:orderInCategory="220"
        android:title="@string/text_editor_redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="225"
        android:title="@string/text_editor_save_as"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="230"
        android:title="@string/text_editor_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encoding"
        android:orderInCategory="100"
        android:title="@string/text_editor_encoding"
        app:showAsAction="never">
        <menu />
    </item>
</menu>
